<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="80dp"
    android:layout_marginStart="60dp"
    android:layout_marginEnd="60dp"
    android:src="@drawable/ic_logo_toex"
    android:scaleType="fitCenter"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
    app:layout_constraintVertical_bias="0.3"
    android:layout_marginTop="60dp"
    android:contentDescription="@string/logo_login"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/username"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorHint"
        android:inputType="text"
        android:drawableStart="@drawable/ic_user_white"
    android:drawablePadding="12dp"
    android:paddingBottom="16dp"
    android:backgroundTint="@color/underlineColor"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintVertical_bias="0.45"
    android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorHint"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_white"
    android:drawablePadding="12dp"
    android:paddingBottom="16dp"
    android:backgroundTint="@color/underlineColor"
    app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
    app:layout_constraintStart_toStartOf="@+id/editTextUsername"
    app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
    android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        android:textColor="@color/buttonSignInText"
    android:background="@drawable/button_rounded_yellow"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
    app:layout_constraintStart_toStartOf="@+id/editTextPassword"
    app:layout_constraintEnd_toEndOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/linkTextForgotPassword"
    android:textSize="14sp"
    app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/linkTextSignUp"
    android:textSize="16sp"
    android:textStyle="bold"
    android:textAllCaps="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>